# Pro3duct

./: .dockerignore  .env  .env.example  .gitignore  AGENTS_HANDOVER.md  Pro3duct_Launcher.ps1  Program pro3duct.txt  docker-compose.yml  package.json  run_pro3duct.ps1  stop_pro3duct.bat  turbo.json  הוראות הפעלה.md  סגירת Pro3duct.bat  פתיחת Pro3duct.bat
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  db_base.py  main.py  temporal_client.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: assets.py  auth.py  digital_twins.py  generation.py  health.py  projects.py  providers.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  audit.py  digital_twin.py  job.py  project.py  provider.py  tenant.py  user.py
backend/app/providers/: __init__.py  circuit_breaker.py  meshy_adapter.py  mock_adapter.py  router.py
backend/app/schemas/: __init__.py  digital_twin.py  job.py  project.py  provider.py
backend/app/services/: asset_service.py  project_service.py  provider_service.py  storage_service.py
backend/app/workflows/: __init__.py  generation_workflow.py  worker.py
backend/app/workflows/activities/: __init__.py  analyze.py  db_helper.py  evaluate.py  generate_3d.py  post_process.py  publish.py  validate.py
docs/: GITHUB_PRODUCT_PUBLISHING.md
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/lib/: api.ts  hebrew.ts
(+41 files in other folders)
